--- a/america.html
+++ b/america.html
@@ -97,7 +97,7 @@
                <div class="row justify-content-center">
                   <div class="col-md-6 col-lg-4">
                      <h2 class="text-center mb-4">The Venetian</h2>
-                     <h6>Sijainti: Las Vegas Strip, Nevada, USA</h6>
+                     <h6><b>Sijainti: </b>Las Vegas Strip, Nevada, USA</h6>
                      <div class="luxhotel_card">
                         <a href="https://www.scandinave.com/whistler" target="_blank">
                         <img src="./assets/images/lh1.jpg" alt="" class="img-fluid">
@@ -107,14 +107,14 @@
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
-                           <p>Yleiskatsaus: Venetian Las Vegas on maamerkki kasinolomakohde, joka tunnetaan
+                           <p><b>Yleiskatsaus: </b>Venetian Las Vegas on maamerkki kasinolomakohde, joka tunnetaan
                               loistostaan, Italian Venetsian inspiroima teemaarkkitehtuuri ja laaja valikoima viihde- ja
                               ruokailumahdollisuuksia.
                            </p>
-                           <p>Pelit: Lomakeskuksessa on valtava kasinolattia, jossa on laaja valikoima pöytäpelejä,
+                           <p><b>Pelit: </b>Lomakeskuksessa on valtava kasinolattia, jossa on laaja valikoima pöytäpelejä,
                               peliautomaatteja, pokerihuoneita ja korkean rajan pelialueita.
                            </p>
-                           <p>Palvelut: Vieraat voivat nauttia ylellisestä majoituksesta, maailmanluokan ruokailusta
+                           <p><b>Palvelut: </b>Vieraat voivat nauttia ylellisestä majoituksesta, maailmanluokan ruokailusta
                               tunnettujen kokkien luona, live-esityksistä, ostoksilla The Grand Canal Shoppesissa ja
                               rentoutumisesta lomakeskuksen uima-altaissa ja kylpylöissä.
                            </p>
@@ -123,7 +123,7 @@
                   </div>
                   <div class="col-md-6 col-lg-4">
                      <h2 class="text-center mb-4">Bellagio</h2>
-                     <h6>Sijainti: Las Vegas Strip, Nevada, USA</h6>
+                     <h6><b>Sijainti:</b> Las Vegas Strip, Nevada, USA</h6>
                      <div class="luxhotel_card">
                         <a href="https://notman.org/" target="_blank">
                         <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
@@ -133,14 +133,14 @@
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
-                           <p>Yleiskatsaus: Bellagio Las Vegas on kuuluisa ikonisista suihkulähteistään, tyylikkäästä
+                           <p><b>Yleiskatsaus: </b>Bellagio Las Vegas on kuuluisa ikonisista suihkulähteistään, tyylikkäästä
                               suunnittelustaan ja korkealuokkaisista tarjouksistaan, kuten kasinosta, luksushotellista,
                               kasvitieteellisestä puutarhasta ja hienoista ruokailukokemuksista.
                            </p>
-                           <p>Pelaaminen: Kasinolla on laaja valikoima pöytäpelejä, high-limit-alueita, pokerihuone ja
+                           <p><b>Pelaaminen: </b>Kasinolla on laaja valikoima pöytäpelejä, high-limit-alueita, pokerihuone ja
                               monipuolinen valikoima peliautomaatteja ja elektronisia pelivaihtoehtoja.
                            </p>
-                           <p>Palvelut: Asiakkaat voivat nauttia Bellagion konservatoriosta ja kasvitieteellisestä
+                           <p><b>Palvelut: </b>Asiakkaat voivat nauttia Bellagion konservatoriosta ja kasvitieteellisestä
                               puutarhasta, kokea Fountains of Bellagio show, ruokailla Michelin-tähdellä palkituissa
                               ravintoloissa ja nauttia yöelämästä lomakeskuksen baareissa ja loungeissa.
                            </p>
@@ -149,7 +149,7 @@
                   </div>
                   <div class="col-md-6 col-lg-4">
                      <h2 class="text-center mb-4">Wynn</h2>
-                     <h6>Sijainti: Las Vegas Strip, Nevada, USA</h6>
+                     <h6><b>Sijainti:</b>Las Vegas Strip, Nevada, USA</h6>
                      <div class="luxhotel_card">
                         <a href="https://notman.org/" target="_blank">
                         <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
@@ -159,14 +159,14 @@
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
-                           <p>Yleiskatsaus: Wynn Las Vegas on ylellinen lomakeskus ja kasino, joka tunnetaan
+                           <p><b>Yleiskatsaus:</b> Wynn Las Vegas on ylellinen lomakeskus ja kasino, joka tunnetaan
                               tyylikkyydestään, tasokkaista majoitustiloistaan, maailmanluokan
                               ruokailumahdollisuuksistaan ja vilkkaasta yöelämästään.
                            </p>
-                           <p>Pelaaminen: Kasino tarjoaa hienostuneen peliympäristön, jossa on valikoima pöytäpelejä,
+                           <p><b>Pelaaminen:</b> Kasino tarjoaa hienostuneen peliympäristön, jossa on valikoima pöytäpelejä,
                               peliautomaatteja, eksklusiivisia high-limit-alueita ja oma pokerihuone.
                            </p>
-                           <p>Palvelut: Vieraat voivat nauttia Wynn Golf Clubista, virkistäytyä spa- ja wellness-tiloissa,
+                           <p><b>Palvelut:</b> Vieraat voivat nauttia Wynn Golf Clubista, virkistäytyä spa- ja wellness-tiloissa,
                               ruokailla palkituissa ravintoloissa, kuten SW Steakhouse ja Mizumi, ja kokea ensiluokkaista
                               viihdettä Wynn Theaterissa.
                            </p>
@@ -189,7 +189,7 @@
                <div class="row justify-content-center">
                   <div class="col-md-6 col-lg-4">
                      <h2 class="text-center mb-4">Borgata Hotel Casino & Spa</h2>
-                     <h6>Sijainti: Atlantic City, New Jersey, USA</h6>
+                     <h6><b>Sijainti:</b> Atlantic City, New Jersey, USA</h6>
                      <div class="luxhotel_card">
                         <a href="https://www.scandinave.com/whistler" target="_blank">
                         <img src="./assets/images/lh1.jpg" alt="" class="img-fluid">
@@ -199,13 +199,13 @@
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
-                           <p>Yleiskatsaus: Borgata Hotel Casino & Spa on ensiluokkainen kohde, joka tarjoaa
+                           <p><b>Yleiskatsaus: </b>Borgata Hotel Casino & Spa on ensiluokkainen kohde, joka tarjoaa
                               sekoituksen kasinon jännitystä, ylellistä majoitusta, tasokasta ruokailua ja viihdepaikkoja.
                            </p>
-                           <p>Pelaaminen: Kasinolla on laaja valikoima pöytäpelejä, peliautomaatteja, pokerihuone ja
+                           <p><b>Pelaaminen: </b>Kasinolla on laaja valikoima pöytäpelejä, peliautomaatteja, pokerihuone ja
                               eksklusiivisia korkean panoksen pelialueita VIP-pelaajille.
                            </p>
-                           <p>Palvelut: Asiakkaat voivat rentoutua kylpylässä ja salongissa, ruokailla
+                           <p><b>Palvelut: </b>Asiakkaat voivat rentoutua kylpylässä ja salongissa, ruokailla
                               gourmet-ravintoloissa, kuten Bobby Flay Steak ja Wolfgang Puck American Grille, osallistua
                               live-esityksiin ja nauttia yöelämästä Borgata Comedy Clubissa ja Premier Nightclubissa.
                            </p>
@@ -214,7 +214,7 @@
                   </div>
                   <div class="col-md-6 col-lg-4">
                      <h2 class="text-center mb-4">Caesars</h2>
-                     <h6>Sijainti: Atlantic City, New Jersey, USA</h6>
+                     <h6><b>Sijainti: </b>Atlantic City, New Jersey, USA</h6>
                      <div class="luxhotel_card">
                         <a href="https://notman.org/" target="_blank">
                         <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
@@ -224,14 +224,14 @@
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
-                           <p>Yleiskatsaus: Caesars Atlantic City on ikoninen kasinolomakohde, joka tunnetaan
+                           <p><b>Yleiskatsaus: </b>Caesars Atlantic City on ikoninen kasinolomakohde, joka tunnetaan
                               roomalaisesta designistaan, ylellisistä majoitusvaihtoehdoistaan, monipuolisista
                               ruokailumahdollisuuksistaan ja vilkkaasta kasinotunnelmasta.
                            </p>
-                           <p>Pelaaminen: Kasino tarjoaa asiakkailleen laajan valikoiman pöytäpelejä, peliautomaatteja,
+                           <p><b>Pelaaminen: </b>Kasino tarjoaa asiakkailleen laajan valikoiman pöytäpelejä, peliautomaatteja,
                               videopokeria ja Total Rewards -kanta-asiakasohjelman.
                            </p>
-                           <p>Palvelut: Asiakkaat voivat kokea Qua Baths & Span, nauttia ruokailusta Gordon Ramsay
+                           <p><b>Palvelut: </b>Asiakkaat voivat kokea Qua Baths & Span, nauttia ruokailusta Gordon Ramsay
                               Pub & Grillissä tai Nero's Italian Steakhousessa ja tutustua viihdepaikkoihin, kuten The
                               Concert Venueen ja Circus Maximus Theatreen.
                            </p>
@@ -240,7 +240,7 @@
                   </div>
                   <div class="col-md-6 col-lg-4">
                      <h2 class="text-center mb-4">Hard Rock Hotel & Casino</h2>
-                     <h6>Sijainti: Atlantic City, New Jersey, USA</h6>
+                     <h6><b>Sijainti: </b>Atlantic City, New Jersey, USA</h6>
                      <div class="luxhotel_card">
                         <a href="https://notman.org/" target="_blank">
                         <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
@@ -250,14 +250,14 @@
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
-                           <p>Yleiskatsaus: Hard Rock Hotel & Casino Atlantic City on musiikkiaiheinen lomakeskus, joka
+                           <p><b>Yleiskatsaus: </b>Hard Rock Hotel & Casino Atlantic City on musiikkiaiheinen lomakeskus, joka
                               tarjoaa rock-and-rollin inspiroimia kokemuksia, elävää viihdettä, pelijännitystä ja tyylikästä
                               majoitusta.
                            </p>
-                           <p>Pelaaminen: Kasinolla on monipuolinen pelilattia, jossa on pöytäpelejä, peliautomaatteja,
+                           <p><b>Pelaaminen: </b>Kasinolla on monipuolinen pelilattia, jossa on pöytäpelejä, peliautomaatteja,
                               pokerihuone ja musiikkiaiheisia viihdealueita, kuten Rock Box ja Rocktane Gas & Wash.
                            </p>
-                           <p>Palvelut: Asiakkaat voivat nauttia elävän musiikin esityksistä Hard Rock Live at Etess
+                           <p><b>Palvelut: </b>Asiakkaat voivat nauttia elävän musiikin esityksistä Hard Rock Live at Etess
                               Arenalla, ruokailla tunnetuissa ravintoloissa, kuten Hard Rock Cafessa ja Council Oak
                               Fishissa, rentoutua Rock Spa & Salonissa ja tehdä ostoksia Rock Shopista muistoesineitä
                               varten.
@@ -281,7 +281,7 @@
                <div class="row justify-content-center">
                   <div class="col-md-6 col-lg-4">
                      <h2 class="text-center mb-4">Dubai Palacen kasino</h2>
-                     <h6>Sijainti: Cancun, Meksiko</h6>
+                     <h6><b>Sijainti: </b>Cancun, Meksiko</h6>
                      <div class="luxhotel_card">
                         <a href="https://www.scandinave.com/whistler" target="_blank">
                         <img src="./assets/images/lh1.jpg" alt="" class="img-fluid">
@@ -291,14 +291,14 @@
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
-                           <p>Yleiskatsaus: Dubai Palace Casino on yksi Cancunin suurimmista ja suosituimmista
+                           <p><b>Yleiskatsaus:</b> Dubai Palace Casino on yksi Cancunin suurimmista ja suosituimmista
                               kasinoista, joka tarjoaa laajan valikoiman pelivaihtoehtoja, elävää viihdettä ja
                               ruokailuelämyksiä modernissa ympäristössä.
                            </p>
-                           <p>Pelaaminen: Kasinolla on erilaisia pöytäpelejä, kuten blackjack, ruletti, pokeri ja
+                           <p><b>Pelaaminen: </b>Kasinolla on erilaisia pöytäpelejä, kuten blackjack, ruletti, pokeri ja
                               peliautomaatit, jotka sopivat sekä satunnaisille pelaajille että high rollereille.
                            </p>
-                           <p>Palvelut: Asiakkaat voivat nauttia elävän musiikin esityksistä, teematapahtumista,
+                           <p><b>Palvelut: </b>Asiakkaat voivat nauttia elävän musiikin esityksistä, teematapahtumista,
                               kansainvälisestä ruoasta paikan päällä olevissa ravintoloissa ja eloisasta kasinotunnelmasta.
                            </p>
                         </div>
@@ -306,7 +306,7 @@
                   </div>
                   <div class="col-md-6 col-lg-4">
                      <h2 class="text-center mb-4">PlayCity kasino</h2>
-                     <h6>Sijainti: Cancun, Meksiko</h6>
+                     <h6><b></b>Sijainti: Cancun, Meksiko</h6>
                      <div class="luxhotel_card">
                         <a href="https://notman.org/" target="_blank">
                         <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
@@ -316,14 +316,14 @@
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
-                           <p>Yleiskatsaus: PlayCity Casino on tunnettu pelikohde Cancunissa, jossa on eloisa tunnelma,
+                           <p><b>Yleiskatsaus: </b>PlayCity Casino on tunnettu pelikohde Cancunissa, jossa on eloisa tunnelma,
                               monipuoliset pelivaihtoehdot ja valikoima mukavuuksia viihdettä ja jännitystä etsiville
                               vierailijoille.
                            </p>
-                           <p>Pelaaminen: Kasino tarjoaa valikoiman pöytäpelejä, mukaan lukien blackjack, ruletti,
+                           <p><b>Pelaaminen: </b> Kasino tarjoaa valikoiman pöytäpelejä, mukaan lukien blackjack, ruletti,
                               pokerivariaatiot sekä elektroniset pelikoneet ja videokolikkopelit.
                            </p>
-                           <p>Palvelut: Asiakkaat voivat nauttia ilmaisia juomia pelatessaan, osallistua kasinon
+                           <p><b>Palvelut: </b>Asiakkaat voivat nauttia ilmaisia juomia pelatessaan, osallistua kasinon
                               promootioihin ja erikoistapahtumiin sekä ruokailla kasinon ravintola- ja baarialueilla.
                            </p>
                         </div>
@@ -331,7 +331,7 @@
                   </div>
                   <div class="col-md-6 col-lg-4">
                      <h2 class="text-center mb-4">Casino Palace Cancun</h2>
-                     <h6>Sijainti: Cancun, Meksiko</h6>
+                     <h6><b>Sijainti: </b>Cancun, Meksiko</h6>
                      <div class="luxhotel_card">
                         <a href="https://notman.org/" target="_blank">
                         <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
@@ -341,15 +341,15 @@
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
-                           <p>Yleiskatsaus: Casino Palace Cancun tarjoaa modernin pelikokemuksen laajalla valikoimalla
+                           <p><b>Yleiskatsaus:</b> Casino Palace Cancun tarjoaa modernin pelikokemuksen laajalla valikoimalla
                               kasinopelejä, live-viihdettä ja ruokailumahdollisuuksia, tarjoten vieraille eloisan ja
                               viihdyttävän ilmapiirin.
                            </p>
-                           <p>Pelaaminen: Kasinolla on valikoima suosittuja pöytäpelejä, kuten blackjack, ruletti,
+                           <p><b>Pelaaminen: </b>Kasinolla on valikoima suosittuja pöytäpelejä, kuten blackjack, ruletti,
                               Caribbean poker ja Texas Hold'em, sekä laaja valikoima peliautomaatteja ja elektronisia
                               peliautomaatteja, jotka palvelevat erilaisia mieltymyksiä.
                            </p>
-                           <p>Palvelut: Vieraat voivat nauttia elävän musiikin esityksistä, teemajuhlista ja erityisistä
+                           <p><b>Palvelut:</b> Vieraat voivat nauttia elävän musiikin esityksistä, teemajuhlista ja erityisistä
                               tapahtumista, joita isännöidään säännöllisesti kasinolla. Paikka tarjoaa myös erilaisia
                               ruokailuvaihtoehtoja, jotka vaihtelevat rennosta välipalasta täyden ruokalajin aterioihin, joita
                               täydentää valikoima juomia, joita tarjoillaan baarialueilla.
