--- a/europe.html
+++ b/europe.html
@@ -101,7 +101,7 @@
                <div class="row justify-content-center">
                   <div class="col-md-6 col-lg-4">
                      <h2 class="text-center mb-4">Monte Carlon kasino</h2>
-                     <h6>Sijainti: Monte Carlo, Monaco</h6>
+                     <h6><b>Sijainti:</b> Monte Carlo, Monaco</h6>
                      <div class="luxhotel_card">
                         <a href="https://www.scandinave.com/whistler" target="_blank">
                         <img src="./assets/images/lh1.jpg" alt="" class="img-fluid">
@@ -111,16 +111,16 @@
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
-                           <p>Yleiskatsaus: Casino de Monte-Carlo on ylellisyyden ja hienostuneisuuden symboli, ja se
+                           <p><b>Yleiskatsaus: </b>Casino de Monte-Carlo on ylellisyyden ja hienostuneisuuden symboli, ja se
                               sijaitsee loistokkaassa Monte Carlon kaupungissa Monacossa. Se perustettiin 1800-luvulla,
                               ja se on tunnettu Belle Époque -arkkitehtuuristaan, hienoista sisätiloistaan ja korkean
                               panoksen pelaamisesta.
                            </p>
-                           <p>Pelaaminen: Kasino tarjoaa laajan valikoiman pöytäpelejä, kuten rulettia, blackjackia,
+                           <p><b>Pelaaminen:</b>Pelaaminen: Kasino tarjoaa laajan valikoiman pöytäpelejä, kuten rulettia, blackjackia,
                               pokeria, baccaratia ja crapsia, sekä vaikuttavan valikoiman peliautomaatteja ja elektronisia
                               pelivaihtoehtoja.
                            </p>
-                           <p>Palvelut: Asiakkaat voivat nauttia fine dining -ruokailusta Le Train Bleu -ravintolassa, kokea
+                           <p><b>Palvelut: </b>Palvelut: Asiakkaat voivat nauttia fine dining -ruokailusta Le Train Bleu -ravintolassa, kokea
                               ylellisen Opera de Monte-Carlon teatterin ja nauttia panoraamanäkymistä kasinon terassilta.
                            </p>
                         </div>
@@ -128,7 +128,7 @@
                   </div>
                   <div class="col-md-6 col-lg-4">
                      <h2 class="text-center mb-4">Casino Café de Paris</h2>
-                     <h6>Sijainti: Monte Carlo, Monaco</h6>
+                     <h6><b>Sijainti:</b>Sijainti: Monte Carlo, Monaco</h6>
                      <div class="luxhotel_card">
                         <a href="https://notman.org/" target="_blank">
                         <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
@@ -138,12 +138,12 @@
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
-                           <p>Yleiskatsaus: Casino de Monte-Carlon lähellä sijaitseva Casino Café de Paris tarjoaa
+                           <p><b>Yleiskatsaus: </b>Yleiskatsaus: Casino de Monte-Carlon lähellä sijaitseva Casino Café de Paris tarjoaa
                               eloisan ja modernin pelikokemuksen ripauksella Monte Carlon viehätysvoimaa. Se
                               tunnetaan vilkkaasta tunnelmastaan, laajoista pelivaihtoehdoistaan ja ylellisistä
                               mukavuuksistaan.
                            </p>
-                           <p>Pelaaminen: Kasinolla on laaja valikoima pelejä, mukaan lukien peliautomaatit, videopokeri,
+                           <p><b>Pelaaminen: </b>Pelaaminen: Kasinolla on laaja valikoima pelejä, mukaan lukien peliautomaatit, videopokeri,
                               elektroninen ruletti ja perinteiset pöytäpelit, kuten blackjack ja ruletti.
                               Palvelut: Asiakkaat voivat nauttia rennosta ruokailusta kasinokompleksin useissa
                               ravintoloissa ja baareissa sekä pääsyn läheisiin luksusputiikkeihin ja viihdepaikkoihin.
@@ -153,7 +153,7 @@
                   </div>
                   <div class="col-md-6 col-lg-4">
                      <h2 class="text-center mb-4">Monte Carlo Bayn kasino</h2>
-                     <h6>Sijainti: Monte Carlo, Monaco</h6>
+                     <h6><b>Sijainti: </b>Monte Carlo, Monaco</h6>
                      <div class="luxhotel_card">
                         <a href="https://notman.org/" target="_blank">
                         <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
@@ -163,13 +163,13 @@
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
-                           <p>Yleiskatsaus: Monte-Carlo Bay Casino tarjoaa nykyaikaisen ja rennon peliympäristön
+                           <p><b>Yleiskatsaus: </b>Monte-Carlo Bay Casino tarjoaa nykyaikaisen ja rennon peliympäristön
                               Monte-Carlo Bay Hotel & Resort -kompleksissa. Se sopii sekä satunnaisille pelaajille että
                               huippupelaajille, jotka etsivät ylellistä mutta rentoa kasinokokemusta.
                               Pelaaminen: Kasinolla on sekoitus kolikkoautomaatteja, elektronisia pelipäätteitä ja
                               pöytäpelejä, kuten blackjack, ruletti ja pokeri.
                            </p>
-                           <p>Palvelut: Asiakkaat voivat rentoutua lomakeskuksen spa- ja wellness-tiloissa, ruokailla
+                           <p><b>Palvelut: </b>Asiakkaat voivat rentoutua lomakeskuksen spa- ja wellness-tiloissa, ruokailla
                               tasoisissa ravintoloissa, joista on näkymät merelle, ja nauttia pääsystä yksityisille
                               ranta-alueille ja maisemapuutarhaan.
                            </p>
@@ -192,7 +192,7 @@
                <div class="row justify-content-center">
                   <div class="col-md-6 col-lg-4">
                      <h2 class="text-center mb-4">Hippodromen kasino</h2>
-                     <h6>Paikka: Lontoo, Iso-Britannia</h6>
+                     <h6><b>Paikka: </b>Lontoo, Iso-Britannia</h6>
                      <div class="luxhotel_card">
                         <a href="https://www.scandinave.com/whistler" target="_blank">
                         <img src="./assets/images/lh1.jpg" alt="" class="img-fluid">
@@ -202,14 +202,14 @@
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
-                           <p>Yleiskatsaus: Hippodrome Casino on historiallinen maamerkki, joka sijaitsee Lontoon West
+                           <p><b>Yleiskatsaus: </b>Hippodrome Casino on historiallinen maamerkki, joka sijaitsee Lontoon West
                               Endin sydämessä. Se tarjoaa ainutlaatuisen sekoituksen perinteistä charmia ja modernia
                               viihdettä, ja se sijaitsee suuressa rakennuksessa, joka oli aikoinaan tunnettu teatteri.
                            </p>
-                           <p>Pelaaminen: Kasinolla on laaja valikoima pelejä, mukaan lukien ruletti, blackjack, pokeri,
+                           <p><b>Pelaaminen: </b>Kasinolla on laaja valikoima pelejä, mukaan lukien ruletti, blackjack, pokeri,
                               baccarat, noppapelit ja laaja valikoima peliautomaatteja ja elektronisia pelipäätteitä.
                            </p>
-                           <p>Palvelut: Asiakkaat voivat nauttia useista kerroksista pelaamista, elävää viihdettä
+                           <p><b>Palvelut: </b>Asiakkaat voivat nauttia useista kerroksista pelaamista, elävää viihdettä
                               Hippodrome Theatressa, monipuolisia ruokailumahdollisuuksia, tyylikkäitä baareja ja eloisaa
                               kasinotunnelmaa.
                            </p>
@@ -218,7 +218,7 @@
                   </div>
                   <div class="col-md-6 col-lg-4">
                      <h2 class="text-center mb-4">Grosvenor Casino Victoria</h2>
-                     <h6>Paikka: Lontoo, Iso-Britannia</h6>
+                     <h6><b>Paikka: </b>Lontoo, Iso-Britannia</h6>
                      <div class="luxhotel_card">
                         <a href="https://notman.org/" target="_blank">
                         <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
@@ -228,11 +228,11 @@
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
-                           <p>Yleiskatsaus: Tunnetaan myös nimellä "The Vic", Grosvenor Casino Victoria London on yksi
+                           <p><b>Yleiskatsaus: </b>Tunnetaan myös nimellä "The Vic", Grosvenor Casino Victoria London on yksi
                               Lontoon vanhimmista ja ikonisimmista kasinoista, joka tarjoaa hienostuneen pelikokemuksen
                               historiallisessa ympäristössä.
                            </p>
-                           <p>Pelaaminen: Kasino tarjoaa valikoiman klassisia pöytäpelejä, kuten blackjack, ruletti,
+                           <p><b>Pelaaminen: </b>Kasino tarjoaa valikoiman klassisia pöytäpelejä, kuten blackjack, ruletti,
                               baccarat ja pokeri, sekä elektronisia pelivaihtoehtoja ja pokerihuoneen turnauksia varten.
                               Palvelut: Asiakkaat voivat nauttia fine dining -ruokailusta hotellin ravintolassa, napata juomia
                               baarista, osallistua pokeriturnauksiin ja kokea Lontoon kasinoelämän vilkasta tunnelmaa.
@@ -242,7 +242,7 @@
                   </div>
                   <div class="col-md-6 col-lg-4">
                      <h2 class="text-center mb-4">Empire Casino</h2>
-                     <h6>Paikka: Lontoo, Iso-Britannia</h6>
+                     <h6><b>Paikka:</b> Lontoo, Iso-Britannia</h6>
                      <div class="luxhotel_card">
                         <a href="https://notman.org/" target="_blank">
                         <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
@@ -252,13 +252,13 @@
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
-                           <p>Yleiskatsaus: Leicester Squarella sijaitseva Empire Casino on suosittu pelikohde, joka
+                           <p><b>Yleiskatsaus: </b>Leicester Squarella sijaitseva Empire Casino on suosittu pelikohde, joka
                               tunnetaan moderneista palveluistaan, monipuolisista pelivaihtoehdoistaan ja eloisasta
                               tunnelmastaan Lontoon viihdealueen sydämessä.
                               Pelaaminen: Kasinolla on erilaisia pöytäpelejä, mukaan lukien blackjack, ruletti, pokeriversiot
                               sekä elektroniset pelikoneet ja turnauksia varten oma pokerihuone.
                            </p>
-                           <p>Palvelut: Vieraat voivat nauttia suorista urheilunäytöksistä, tapahtumista kasinon baareissa
+                           <p><b>Palvelut: </b>Vieraat voivat nauttia suorista urheilunäytöksistä, tapahtumista kasinon baareissa
                               ja loungeissa, rennon ruokailumahdollisuuksista ja Leicester Squarea ympäröivästä
                               vilkkaasta yöelämästä.
                            </p>
@@ -281,7 +281,7 @@
                <div class="row justify-content-center">
                   <div class="col-md-6 col-lg-4">
                      <h2 class="text-center mb-4">Kasino Atrium Hilton</h2>
-                     <h6>Paikka: Praha, Tšekki</h6>
+                     <h6><b>Paikka: </b>Praha, Tšekki</h6>
                      <div class="luxhotel_card">
                         <a href="https://www.scandinave.com/whistler" target="_blank">
                         <img src="./assets/images/lh1.jpg" alt="" class="img-fluid">
@@ -291,13 +291,13 @@
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
-                           <p>Yleiskatsaus: Casino Atrium Hilton on osa Hilton Prague -hotellia, joka tarjoaa hienostuneen
+                           <p><b>Yleiskatsaus: </b>Casino Atrium Hilton on osa Hilton Prague -hotellia, joka tarjoaa hienostuneen
                               pelikokemuksen Prahan historiallisen keskustan sydämessä.
                            </p>
-                           <p>Pelaaminen: Kasinolla on erilaisia pöytäpelejä, kuten rulettia, blackjackia ja pokeria, sekä
+                           <p><b>Pelaaminen: </b>Kasinolla on erilaisia pöytäpelejä, kuten rulettia, blackjackia ja pokeria, sekä
                               valikoiman peliautomaatteja ja elektronisia pelivaihtoehtoja.
                            </p>
-                           <p>Palvelut: Vieraat voivat nauttia ylellisestä majoituksesta Hilton Prague hotellissa, fine dining
+                           <p><b>Palvelut: </b>Vieraat voivat nauttia ylellisestä majoituksesta Hilton Prague hotellissa, fine dining
                               ravintoloista, spa ja wellness tiloista sekä helpon pääsyn Prahan kulttuurikohteisiin.
                            </p>
                         </div>
@@ -305,7 +305,7 @@
                   </div>
                   <div class="col-md-6 col-lg-4">
                      <h2 class="text-center mb-4">Kasinon lähettiläs</h2>
-                     <h6>Paikka: Praha, Tšekki</h6>
+                     <h6><b>Paikka: </b>Praha, Tšekki</h6>
                      <div class="luxhotel_card">
                         <a href="https://notman.org/" target="_blank">
                         <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
@@ -315,13 +315,13 @@
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
-                           <p>Yleiskatsaus: Casino Ambassador on tyylikäs ja intiimi pelipaikka Prahan sydämessä, joka
+                           <p><b>Yleiskatsaus: </b>Casino Ambassador on tyylikäs ja intiimi pelipaikka Prahan sydämessä, joka
                               tarjoaa sekoituksen klassisia kasinopelejä ja moderneja pelikokemuksia.
                            </p>
-                           <p>Pelaaminen: Kasino tarjoaa valikoiman pöytäpelejä, kuten rulettia, blackjackia,
+                           <p><b>Pelaaminen: </b>Kasino tarjoaa valikoiman pöytäpelejä, kuten rulettia, blackjackia,
                               pokeriversioita, sekä elektronisia pelikoneita ja videokolikkopelejä.
                            </p>
-                           <p>Palvelut: Vieraat voivat nauttia viihtyisästä kasinotunnelmasta, ilmaisista juomista
+                           <p><b>Palvelut: </b>Vieraat voivat nauttia viihtyisästä kasinotunnelmasta, ilmaisista juomista
                               pelaamisen aikana ja henkilökohtaisesta palvelusta hienostuneessa ympäristössä.
                            </p>
                         </div>
@@ -329,7 +329,7 @@
                   </div>
                   <div class="col-md-6 col-lg-4">
                      <h2 class="text-center mb-4">Kasino Banco</h2>
-                     <h6>Paikka: Praha, Tšekki</h6>
+                     <h6><b>Paikka: </b>Praha, Tšekki</h6>
                      <div class="luxhotel_card">
                         <a href="https://notman.org/" target="_blank">
                         <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
@@ -339,11 +339,11 @@
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
-                           <p>Yleiskatsaus: Casino Banco on vakiintunut kasino, joka sijaitsee lähellä Venceslauksen
+                           <p><b>Yleiskatsaus: </b>Casino Banco on vakiintunut kasino, joka sijaitsee lähellä Venceslauksen
                               aukiota Prahassa ja joka tunnetaan ystävällisestä ilmapiiristä, monipuolisista
                               pelivaihtoehdoista ja kätevästä keskeisestä sijainnistaan.
                            </p>
-                           <p>Pelaaminen: Kasinolla on klassisia pöytäpelejä, kuten rulettia, blackjackia, pokerivariaatioita,
+                           <p><b>Pelaaminen: </b>Kasinolla on klassisia pöytäpelejä, kuten rulettia, blackjackia, pokerivariaatioita,
                               sekä elektronisia pelikoneita ja videokolikkopelejä, jotka sopivat erilaisiin mieltymyksiin.
                               Palvelut: Asiakkaat voivat kokea rennon peliympäristön, osallistua säännöllisiin kasinon
                               promootioihin ja tapahtumiin sekä tutustua läheisiin nähtävyyksiin Prahan keskustassa.
